[package]
name = "agentzero-infra"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Agent orchestration, runtime execution, and tool wiring for AgentZero"
repository.workspace = true

[features]
default = ["memory-sqlite", "document-tools", "tools-full"]
tools-core = ["agentzero-tools/tools-core"]
tools-extended = ["tools-core", "agentzero-tools/tools-extended"]
tools-full = ["tools-extended", "nl-evolving", "agentzero-tools/tools-full"]
nl-evolving = []
memory-sqlite = []
document-tools = ["agentzero-tools/document-tools"]
memory-turso = ["agentzero-storage/memory-turso"]
autopilot = ["dep:agentzero-autopilot"]
wasm-plugins = ["dep:agentzero-plugins"]
wasm-jit = ["wasm-plugins", "agentzero-plugins/wasm-jit"]
telemetry = ["dep:opentelemetry", "dep:opentelemetry_sdk", "dep:opentelemetry-otlp", "dep:tracing-opentelemetry", "dep:tracing-subscriber"]
local-model = ["agentzero-providers/local-model"]

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
agentzero-auth = { workspace = true }
agentzero-config = { workspace = true }
agentzero-core = { workspace = true }
agentzero-macros = { workspace = true }
agentzero-tools = { workspace = true }
agentzero-storage = { workspace = true }
agentzero-autopilot = { workspace = true, optional = true }
agentzero-plugins = { workspace = true, features = ["wasm-runtime"], optional = true }
agentzero-providers = { workspace = true }
dashmap = { workspace = true }
opentelemetry = { version = "0.29", optional = true }
opentelemetry_sdk = { version = "0.29", features = ["rt-tokio"], optional = true }
opentelemetry-otlp = { version = "0.29", features = ["grpc-tonic"], optional = true }
tracing-opentelemetry = { version = "0.30", optional = true }
reqwest = { workspace = true, features = ["multipart"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, optional = true }

[dev-dependencies]
agentzero-orchestrator = { workspace = true }
agentzero-testkit = { workspace = true }
temp-env = "0.3"
