[package]
name = "agentzero-memory-turso"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
agentzero-core = { path = "../agentzero-core" }
libsql = { version = "0.9.29", default-features = true }
tokio.workspace = true
